; ModuleID = '/home/carl/AnghaBench/lede/package/network/services/hostapd/src/wpa_supplicant/extr_ubus.c_ubus_receive.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/services/hostapd/src/wpa_supplicant/extr_ubus.c_ubus_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubus_context = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i8*)* @ubus_receive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ubus_receive(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ubus_context*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.ubus_context*
  store %struct.ubus_context* %9, %struct.ubus_context** %7, align 8
  %10 = load %struct.ubus_context*, %struct.ubus_context** %7, align 8
  %11 = call i32 @ubus_handle_event(%struct.ubus_context* %10)
  ret void
}

declare dso_local i32 @ubus_handle_event(%struct.ubus_context*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
